fix: bad scaling for hero on mobile

--- a/x-idian/themes/roxo-hugo/assets/scss/components/_hero.scss
+++ b/x-idian/themes/roxo-hugo/assets/scss/components/_hero.scss
@@ -1,6 +1,6 @@
 .site-hero{
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #333;
   background-size: cover;
   background-position: center center;
@@ -18,7 +18,7 @@
   }
 
   @media (max-width: 921px) {
-    padding: 150px 0;
+    padding: 100px 0;
     .container-fluid {
       max-width: 100%;
       margin-left: auto;
